# flask-buzz

./: .pre-commit-config.yaml  .project_metadata.py  .travis.yml  404.html  CHANGELOG.md  CHANGELOG.rst  LICENSE.md  MANIFEST.in  Makefile  README.md  README.rst  index.html  objects.inv  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: docs.yml  main.yml
docs/: conf.py  features.rst  flask_buzz.rst  index.rst  mkdocs.yaml  modules.rst  overview.rst  quickstart.rst  requirements.txt
docs/source/: features.md  index.md  quickstart.md  reference.md
examples/: basic.py  custom.py  debug.py  handler.py  jsonify.py  restplus.py  restx.py  tasks.py
features/: index.html
flask_buzz/: __init__.py
quickstart/: index.html
reference/: index.html
search/: search_index.json
src/flask_buzz/: __init__.py  base.py
tests/: conftest.py  test_flask_buzz.py
