[tool.poetry]
name = "flask-buzz"
version = "1.0.0"
description = "'Extra bindings on py-buzz specifically for flask apps'"
authors = ["Tucker Beck <tucker.beck@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
py-buzz = "^2.0.0"
flask = "^1.0"

[tool.poetry.dev-dependencies]
flask-restplus = "^0.13.0"
flake8 = "^3.7"
pytest = "^6.0"
pytest-flask = "^1.1.0"
toml = "^0.10.0"
black = "^20.8b1"
isort = "^5.7.0"
werkzeug = "0.16.1"

[tool.black]
line-length = 120

[tool.isort]
src_paths = ["flask_buzz", "tests"]
multi_line_output = 3
include_trailing_comma = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
